* Dialer (ECCP): add support for new requests "getincomingqueuestatus" and 
  "getincomingqueuelist" required for monitoring incoming calls with no 
  associated campaign.
* Dialer (ECCP): add ECCP authentication to several requests that missed it.
* Agent Information: fix some misspellings and awkward phrasings  
* Campaign Monitoring: fix javascript syntax rejected by IE. Also, work around
  IE issue that collapses JSON members that contain only empty objects or arrays
  into nulls.
* Dialer (ECCP): getcampaignstatus: fix callstatus lowercase, use camelcase.
* Dialer (ECCP): getcampaignstatus: fix crashing bug when fetching status of a
  campaign with at least one logged-in static agent.
* Callback Extensions: fixed multiple bugs in a single function: 1) removed
  incorrect attempt to use database root user for ordinary module operation.
  2) fixed incorrect assumption that selected database user can read both the
  'call_center' and the 'asterisk' databases. 3) added missing error reporting
  so that database failures are not hidden.
* Campaign Monitoring: added new module. This module displays a campaign-centric
  view of the callcenter activity. This module displays basic information on the
  campaign, and counters of call states. Additionally there is a panel of agents
  that handle calls, with current state and the phone number that is being
  handled. Another panel shows in-progress calls that are being placed and do
  not yet have an assigned agent. A log view displays all of the call-related
  activities with timestamps. All of this information is updated in realtime
  using ECCP events.
* Agent Console: add support for new request "callprogress".
* Agent Console: add support for the three new fields in agentunlinked event.
* Dialer (ECCP): add debug tracking to msg_QueueMemberRemoved. 
* Dialer (ECCP): getcampaignstatus: callstatus is now camelcased (internal 
  representation) instead of lowercase. Fix documentation to reflect this.